[package]
name = "axum-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid"] }
modql = { version = "0.3", features = ["with-sea-query"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Hashing (pwd scheme-01 &token)
hmac = "0.12"
sha2 = "0.10"
# -- Others
base64 = "0.21"
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = "0.3"
strum_macros = "0.25"
derive_more = { version = "1.0.0-beta", features = ["from"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
rand = "0.8" # For examples/gen-key