[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev

[workspace]
resolver = "2"
members = [
  # Libraries
  "crates/libs/lib-auth",
  "crates/libs/lib-core",
  "crates/libs/lib-rpc",
  "crates/libs/lib-utils",

  # Services
  "crates/services/web-server",

  # Tools
  "crates/tools/gen-key"
]