[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base64 = "0.21"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
rand = "0.8" # For examples/gen-key